class Bala
{
private:
    
public:
    Bala() {}
    ~Bala() {}
};