class Bonus
{
private:
    
public:
    Bonus() {}
    ~Bonus() {}
};