class Calamar
{
private:
    
public:
    Calamar() {}
    ~Calamar() {}
};