class Cangrejo
{
private:
    
public:
    Cangrejo() {}
    ~Cangrejo() {}
};