class Colision
{
private:
    
public:
    Colision() {}
    ~Colision() {}
};