class CuentaRegresiva
{
private:
    
public:
    CuentaRegresiva() {}
    ~CuentaRegresiva() {}
};