class Disparo
{
private:
    
public:
    Disparo() {}
    ~Disparo() {}
};