class Enemigo
{
private:
    
public:
    Enemigo() {}
    ~Enemigo() {}
};