class Escudo
{
private:
    
public:
    Escudo() {}
    ~Escudo() {}
    
};