class Juego
{
private:
    
public:
    Juego() {}
    ~Juego() {}
};