class Marcador
{
private:
    
public:
    Marcador() {}
    ~Marcador() {}
};