class Movimiento
{
private:
    
public:
    Movimiento() {}
    ~Movimiento() {}
};