class Nave
{
private:
    
public:
    Nave() {}
    ~Nave() {}
};