class Nivel
{
private:
    
public:
    Nivel() {}
    ~Nivel() {}
};