class Ovni
{
private:
    
public:
    Ovni() {}
    ~Ovni() {}
};