class Pantalla
{
private:
    
public:
    Pantalla() {}
    ~Pantalla() {}
};