class Pulpo
{
private:
    
public:
    Pulpo() {}
    ~Pulpo() {}
};