class Puntuacion
{
private:
    
public:
    Puntuacion() {}
    ~Puntuacion() {}
};