class PuntuacionAlta
{
private:
    
public:
    PuntuacionAlta() {}
    ~PuntuacionAlta() {}
};