class Rayo
{
private:
    
public:
    Rayo() {}
    ~Rayo() {}
};