class Resistencia
{
private:
    
public:
    Resistencia () {}
    ~Resistencia() {}
};