class Sonido
{
private:
    
public:
    Sonido() {}
    ~Sonido() {}
};