class Tiempo
{
private:
    
public:
    Tiempo() {}
    ~Tiempo() {}
};